--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Oregano&display=swap');
 @import "tailwindcss";
+
 
 :root {
   --background: #000000; 
   --foreground: #ffffff; 
+  --font-oregano: 'Oregano', cursive;
 }
 
 @theme inline {
@@ -24,3 +27,4 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
